--- a/cn/index.html
+++ b/cn/index.html
@@ -185,7 +185,7 @@
                     <div class="subtitle link"></div>
                 </div>
             </div>
-            <div class="clear"></div>
+            <div class="clearfix"></div>
         </div>
     </section>
 
@@ -198,78 +198,7 @@
             <p>DFINITY, especially Threshold Relay Chain consensus, extensively uses Stanford BLS signature as a cryptographic VRF (verifiable random function) to achieve incorruptible, unmanipulable and unpredictible randomness to select block maker and validator groups.</p>
             <p>It's also used in PHI autonomous commercial banking system as a powerful way to randomly select validators for financial loans to prevent collusion.</p>
         </div>
-        <table id="research-table">
-            <colgroup>
-                <col width="200">
-                <col width="300">
-                <col width="100">
-                <col width="100">
-                <col width="100">
-                <col width="100">
-                <col width="100">
-            </colgroup>
-            <tbody>
-                <tr>
-                    <td>
-                        <div>Cryptography</div>
-                    </td>
-                    <td>
-                        <div>Distributed Computing</div>
-                    </td>
-                    <td>
-                        <div>Economics</div>
-                    </td>
-                    <td>
-                        <div>Programming Languages</div>
-                    </td>
-                    <td>
-                        <div>Virtual Machines</div>
-                    </td>
-                    <td>
-                        <div>Trusted Computing</div>
-                    </td>
-                    <td>
-                        <div>Computer Security</div>
-                    </td>
-                </tr>
-                <tr class="panels">
-                    <td>
-                        <div>Topic</div>
-                        <div>Topic</div>
-                    </td>
-                    <td>
-                        <div>Topic</div>
-                        <div>Topic</div>
-                        <div>Topic</div>
-                    </td>
-                    <td colspan="5">
-                        <div>Topic</div>
-                        <div>Topic</div>
-                        <div>Topic</div>
-                        <div>Topic</div>
-                        <div>Topic</div>
-                    </td>
-                </tr>
-                <tr class="panels">
-                    <td>
-                        <div>Goal</div>
-                        <div>Goal</div>
-                    </td>
-                    <td>
-                        <div>Goal</div>
-                        <div>Goal</div>
-                        <div>Goal</div>
-                    </td>
-                    <td colspan="5">
-                        <div>Goal</div>
-                        <div>Goal</div>
-                        <div>Goal</div>
-                        <div>Goal</div>
-                        <div>Goal</div>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="center">[ research infographic ]</div>
         <div class="clearfix"></div>
     </section>
 
@@ -312,23 +241,39 @@
                     </div>
                 </div>
             </div>
-            <div class="clear"></div>
+            <div class="clearfix"></div>
         </div>
     </section>
+
     <section id="section-team" class="page-section section nomargin dark bg-stringlabs-dark full-height">
     	<div class="heading-block center">
     		<h2>团队</h2>
     		<p>热爱前沿的密码学和分布式技术吗？加入String推动区块链科学发展吧！</p>
     	</div>
-    	<div class="container clearfix">
+        <div id="team-desc" class="pull-left">
+            <h6>President/CTO</h6>
+            <h3>Dominic Williams</h3>
+            <p>热爱复杂协议和架构设计，来自英国的奇客、工程师和连环创业家。Dominic多米尼克踏入分布式计算领域来自他的上一个创业项目 - 一个迅速成长到超过3百万用户的大型游戏项目。年轻时热爱嬉皮文化，依旧不妨碍他在伦敦大学期间获得多个计算机工程学术大奖。</p>
+        </div>
+        <div class="team-feature pull-left">
+            <div class="team team-list clearfix">
+                <div class="team-image">
+                    <img src="./images/team/dom-head2.jpg" alt="Dominic Williams">
+                </div>
+            </div>
+        </div>
+    	<div class="container pull-left">
     		<div class="row">
-    			<div class="col-md-6 bottommargin">
+    			<div class="team-item">
     				<div class="team team-list clearfix">
     					<div class="team-image">
     						<img src="./images/team/dom-head2.jpg" alt="Dominic Williams">
     					</div>
     					<div class="team-desc">
-    						<div class="team-title"><h4>Dominic Williams</h4><span>President/CTO</span></div>
+    						<div class="team-title">
+                                <h4>Dominic Williams</h4>
+                                <span>President/CTO</span>
+                            </div>
     						<div class="team-content">
     						    <p>热爱复杂协议和架构设计，来自英国的奇客、工程师和连环创业家。Dominic多米尼克踏入分布式计算领域来自他的上一个创业项目 - 一个迅速成长到超过3百万用户的大型游戏项目。年轻时热爱嬉皮文化，依旧不妨碍他在伦敦大学期间获得多个计算机工程学术大奖。</p>
     						</div>
@@ -347,15 +292,18 @@
     					</div>
     				</div>
     			</div>
-    			<div class="col-md-6 bottommargin">
+    			<div class="team-item">
     				<div class="team team-list clearfix">
     					<div class="team-image">
     						<img src="./images/team/tom-head1.jpg" alt="Tom Ding">
     					</div>
     					<div class="team-desc">
-    						<div class="team-title"><h4>Tom Ding</h4><span>CEO</span></div>
+    						<div class="team-title">
+                                <h4>Tom Ding</h4>
+                                <span>CEO</span>
+                            </div>
     						<div class="team-content">
-    							<p><p>连续创业者、区块链大学(Blockchain University) 创始人、以及之前在eBay担任高级经理，来自上海的Tom (丁磊) 从2013年踏上了区块链行业大潮后一无反顾的开始了他的创业征程。更早之前，他14岁成为最年轻的获得计算机专业学士学位者之一，并在20岁获得商学院MBA学位。Tom时常受邀在各个创业及区块链论坛进行演讲。</p></p>
+    							<p>连续创业者、区块链大学(Blockchain University) 创始人、以及之前在eBay担任高级经理，来自上海的Tom (丁磊) 从2013年踏上了区块链行业大潮后一无反顾的开始了他的创业征程。更早之前，他14岁成为最年轻的获得计算机专业学士学位者之一，并在20岁获得商学院MBA学位。Tom时常受邀在各个创业及区块链论坛进行演讲。</p>
     						</div>
     						<a href="https://twitter.com/tom_ding" class="social-icon si-rounded si-small si-twitter">
     							<i class="icon-twitter"></i>
@@ -368,18 +316,18 @@
     					</div>
     				</div>
     			</div>
-    		</div>
-    		<div class="clear"></div>
-    		<div class="row">
-    			<div class="col-md-6 bottommargin">
+    			<div class="team-item">
     				<div class="team team-list clearfix">
     					<div class="team-image">
     						<img src="./images/team/timo-head1.jpg" alt="Timo Hanke">
     					</div>
     					<div class="team-desc">
-    						<div class="team-title"><h4>Timo Hanke</h4><span>Chief Cryptographer</span></div>
+    						<div class="team-title">
+                                <h4>Timo Hanke</h4>
+                                <span>Chief Cryptographer</span>
+                            </div>
     						<div class="team-content">
-    							<p><p>曾经在德国Aachen大学担任数学及密码学教授多年，Timo在比特币和以太坊等去中心化系统崛起后，彻底的迷上了这个新的技术浪潮。之前他曾在多个领先的区块链产品和公司担任技术负责人，之前前他曾发明了著名的AsicBoost(http://asicboost.com)技术并获得专利。在String, 他目前负责第三代密码学分布式系统的研发。</p></p>
+    							<p>曾经在德国Aachen大学担任数学及密码学教授多年，Timo在比特币和以太坊等去中心化系统崛起后，彻底的迷上了这个新的技术浪潮。之前他曾在多个领先的区块链产品和公司担任技术负责人，之前前他曾发明了著名的AsicBoost(http://asicboost.com)技术并获得专利。在String, 他目前负责第三代密码学分布式系统的研发。</p>
     						</div>
     						<a href="https://twitter.com/timothanke" class="social-icon si-rounded si-small si-twitter">
     							<i class="icon-twitter"></i>
@@ -396,15 +344,20 @@
     					</div>
     				</div>
     			</div>
-    			<div class="col-md-6 bottommargin">
+            </div>
+            <div class="row">
+    			<div class="team-item">
     				<div class="team team-list clearfix">
     					<div class="team-image">
     						<img src="./images/team/enzo-head1.jpg" alt="Enzo Haussecker">
     					</div>
     					<div class="team-desc">
-    						<div class="team-title"><h4>Enzo Haussecker</h4><span>Senior Software Engineer</span></div>
+    						<div class="team-title">
+                                <h4>Enzo Haussecker</h4>
+                                <span>Senior Software Engineer</span>
+                            </div>
     						<div class="team-content">
-    							<p><p></p></p>
+    							<p></p>
     						</div>
     						<a href="https://www.linkedin.com/in/ehaussecker" class="social-icon si-rounded si-small si-linkedin">
     							<i class="icon-linkedin"></i>
@@ -413,16 +366,16 @@
     					</div>
     				</div>
     			</div>
-    		</div>
-    		<div class="clear"></div>
-    		<div class="row">
-    			<div class="col-md-6 bottommargin">
+    			<div class="team-item">
     				<div class="team team-list clearfix">
     					<div class="team-image">
     						<img src="./images/team/tomomi-head1.jpg" alt="Tomomi Menjo">
     					</div>
     					<div class="team-desc">
-    						<div class="team-title"><h4>Tomomi Menjo</h4><span>Project Coordinator</span></div>
+    						<div class="team-title">
+                                <h4>Tomomi Menjo</h4>
+                                <span>Project Coordinator</span>
+                            </div>
     						<div class="team-content">
     							<p>充满活力的Tomomi是String的项目协调负责人，游刃有余地穿梭在String多个大型技术工程和商务拓展活动之间。她之前工作位于硅谷Menlo Park的女性创业实验室，并能流利的说英语和日语。她以优等生的荣誉毕业于Santa Clara大学的通讯专业。</p>
     						</div>
@@ -433,13 +386,16 @@
     					</div>
     				</div>
     			</div>
-    			<div class="col-md-6 bottommargin">
+    			<div class="team-item">
     				<div class="team team-list clearfix">
     					<div class="team-image">
     						<img src="./images/team/jon-head1.jpg" alt="Jon Ball">
     					</div>
     					<div class="team-desc">
-    						<div class="team-title"><h4>Jon Ball</h4><span>Creative Lead</span></div>
+    						<div class="team-title">
+                                <h4>Jon Ball</h4>
+                                <span>Creative Lead</span>
+                            </div>
     						<div class="team-content">
     							<p>作为一名享誉国际和拥有高度影响力的设计师，Jon之前为无数个国际著名顶尖品牌创造过一系列具有独特原创风格的设计作品，从印刷品，数字设计到视频创作。Jon和Dominic在之前的大型游戏项目中就有过成功合作创造了一款爆发性增长的产品。</p>
     						</div>
@@ -451,8 +407,8 @@
     				</div>
     			</div>
     		</div>
-    		<div class="clear"></div>
     	</div>
+        <div class="clearfix"></div>
     </section>
 
     <section id="section-investment" class="page-section section nomargin dark bg-stringlabs full-height">
