--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <section id="section-hero" class="page-section section nomargin dark bg-stringlabs" data-href="#section-work">
         <div class="heading-block">
             <h2>Advancing open protocols</h2>
-            <p>Cutting-edge crypto labs & investor</p>
+            <p>Cutting-edge crypto Labs & investor</p>
         </div>
     </section>
 
@@ -185,7 +185,7 @@
                     <div class="subtitle link"></div>
                 </div>
             </div>
-            <div class="clear"></div>
+            <div class="clearfix"></div>
         </div>
     </section>
 
@@ -198,78 +198,7 @@
             <p>DFINITY, especially Threshold Relay Chain consensus, extensively uses Stanford BLS signature as a cryptographic VRF (verifiable random function) to achieve incorruptible, unmanipulable and unpredictible randomness to select block maker and validator groups.</p>
             <p>It's also used in PHI autonomous commercial banking system as a powerful way to randomly select validators for financial loans to prevent collusion.</p>
         </div>
-        <table id="research-table">
-            <colgroup>
-                <col width="200">
-                <col width="300">
-                <col width="100">
-                <col width="100">
-                <col width="100">
-                <col width="100">
-                <col width="100">
-            </colgroup>
-            <tbody>
-                <tr>
-                    <td>
-                        <div>Cryptography</div>
-                    </td>
-                    <td>
-                        <div>Distributed Computing</div>
-                    </td>
-                    <td>
-                        <div>Economics</div>
-                    </td>
-                    <td>
-                        <div>Programming Languages</div>
-                    </td>
-                    <td>
-                        <div>Virtual Machines</div>
-                    </td>
-                    <td>
-                        <div>Trusted Computing</div>
-                    </td>
-                    <td>
-                        <div>Computer Security</div>
-                    </td>
-                </tr>
-                <tr class="panels">
-                    <td>
-                        <div>Topic</div>
-                        <div>Topic</div>
-                    </td>
-                    <td>
-                        <div>Topic</div>
-                        <div>Topic</div>
-                        <div>Topic</div>
-                    </td>
-                    <td colspan="5">
-                        <div>Topic</div>
-                        <div>Topic</div>
-                        <div>Topic</div>
-                        <div>Topic</div>
-                        <div>Topic</div>
-                    </td>
-                </tr>
-                <tr class="panels">
-                    <td>
-                        <div>Goal</div>
-                        <div>Goal</div>
-                    </td>
-                    <td>
-                        <div>Goal</div>
-                        <div>Goal</div>
-                        <div>Goal</div>
-                    </td>
-                    <td colspan="5">
-                        <div>Goal</div>
-                        <div>Goal</div>
-                        <div>Goal</div>
-                        <div>Goal</div>
-                        <div>Goal</div>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="center">[ research infographic ]</div>
         <div class="clearfix"></div>
     </section>
 
@@ -312,23 +241,39 @@
                     </div>
                 </div>
             </div>
-            <div class="clear"></div>
+            <div class="clearfix"></div>
         </div>
     </section>
+
     <section id="section-team" class="page-section section nomargin dark bg-stringlabs-dark full-height">
     	<div class="heading-block center">
     		<h2>The Team</h2>
     		<p>Love cutting edge crypto? Join us, String Labs is a great place to be!</p>
     	</div>
-    	<div class="container clearfix">
+        <div id="team-desc" class="pull-left">
+            <h6>President/CTO</h6>
+            <h3>Dominic Williams</h3>
+            <p>Protocol geek, coder and serial technology entrepreneur who hails from the UK. Dominic's last venture was an MMO that grew to 3M users and allowed him to indulge his passion for scalable tech. Dominic is a bit of a hippy, but once won prizes in Computer Science at London University.</p>
+        </div>
+        <div class="team-feature pull-left">
+            <div class="team team-list clearfix">
+                <div class="team-image">
+                    <img src="./images/team/dom-head2.jpg" alt="Dominic Williams">
+                </div>
+            </div>
+        </div>
+    	<div class="container pull-left">
     		<div class="row">
-    			<div class="col-md-6 bottommargin">
+    			<div class="team-item">
     				<div class="team team-list clearfix">
     					<div class="team-image">
     						<img src="./images/team/dom-head2.jpg" alt="Dominic Williams">
     					</div>
     					<div class="team-desc">
-    						<div class="team-title"><h4>Dominic Williams</h4><span>President/CTO</span></div>
+    						<div class="team-title">
+                                <h4>Dominic Williams</h4>
+                                <span>President/CTO</span>
+                            </div>
     						<div class="team-content">
     						    <p>Protocol geek, coder and serial technology entrepreneur who hails from the UK. Dominic's last venture was an MMO that grew to 3M users and allowed him to indulge his passion for scalable tech. Dominic is a bit of a hippy, but once won prizes in Computer Science at London University.</p>
     						</div>
@@ -347,15 +292,18 @@
     					</div>
     				</div>
     			</div>
-    			<div class="col-md-6 bottommargin">
+    			<div class="team-item">
     				<div class="team team-list clearfix">
     					<div class="team-image">
     						<img src="./images/team/tom-head1.jpg" alt="Tom Ding">
     					</div>
     					<div class="team-desc">
-    						<div class="team-title"><h4>Tom Ding</h4><span>CEO</span></div>
+    						<div class="team-title">
+                                <h4>Tom Ding</h4>
+                                <span>CEO</span>
+                            </div>
     						<div class="team-content">
-    							<p><p>Serial entrepreneur, founder of Blockchain University and previously a senior manager at eBay who comes from Shanghai. Tom caught the blockchain wave in 2013 and hasn't looked back. Back in the day, he graduated in Computer Science at age 14 and from business school at 20. Tom's a regular startup and crypto pundit.</p></p>
+    							<p>Serial entrepreneur, founder of Blockchain University and previously a senior manager at eBay who comes from Shanghai. Tom caught the blockchain wave in 2013 and hasn't looked back. Back in the day, he graduated in Computer Science at age 14 and from business school at 20. Tom's a regular startup and crypto pundit.</p>
     						</div>
     						<a href="https://twitter.com/tom_ding" class="social-icon si-rounded si-small si-twitter">
     							<i class="icon-twitter"></i>
@@ -368,18 +316,18 @@
     					</div>
     				</div>
     			</div>
-    		</div>
-    		<div class="clear"></div>
-    		<div class="row">
-    			<div class="col-md-6 bottommargin">
+    			<div class="team-item">
     				<div class="team team-list clearfix">
     					<div class="team-image">
     						<img src="./images/team/timo-head1.jpg" alt="Timo Hanke">
     					</div>
     					<div class="team-desc">
-    						<div class="team-title"><h4>Timo Hanke</h4><span>Chief Cryptographer</span></div>
+    						<div class="team-title">
+                                <h4>Timo Hanke</h4>
+                                <span>Chief Cryptographer</span>
+                            </div>
     						<div class="team-content">
-    							<p><p>Once an Aachen University mathematics and cryptography professor in Germany, Timo caught the decentralization bug. Timo has worked on numerous crypto products and prior to joining String Labs invented and patented the famous AsicBoost (http://asicboost.com/). At String he works on Third Generation crypto systems.</p></p>
+    							<p>Once an Aachen University mathematics and cryptography professor in Germany, Timo caught the decentralization bug. Timo has worked on numerous crypto products and prior to joining String Labs invented and patented the famous AsicBoost (http://asicboost.com/). At String he works on Third Generation crypto systems.</p>
     						</div>
     						<a href="https://twitter.com/timothanke" class="social-icon si-rounded si-small si-twitter">
     							<i class="icon-twitter"></i>
@@ -396,15 +344,20 @@
     					</div>
     				</div>
     			</div>
-    			<div class="col-md-6 bottommargin">
+            </div>
+            <div class="row">
+    			<div class="team-item">
     				<div class="team team-list clearfix">
     					<div class="team-image">
     						<img src="./images/team/enzo-head1.jpg" alt="Enzo Haussecker">
     					</div>
     					<div class="team-desc">
-    						<div class="team-title"><h4>Enzo Haussecker</h4><span>Senior Software Engineer</span></div>
+    						<div class="team-title">
+                                <h4>Enzo Haussecker</h4>
+                                <span>Senior Software Engineer</span>
+                            </div>
     						<div class="team-content">
-    							<p><p></p></p>
+    							<p></p>
     						</div>
     						<a href="https://www.linkedin.com/in/ehaussecker" class="social-icon si-rounded si-small si-linkedin">
     							<i class="icon-linkedin"></i>
@@ -413,16 +366,16 @@
     					</div>
     				</div>
     			</div>
-    		</div>
-    		<div class="clear"></div>
-    		<div class="row">
-    			<div class="col-md-6 bottommargin">
+    			<div class="team-item">
     				<div class="team team-list clearfix">
     					<div class="team-image">
     						<img src="./images/team/tomomi-head1.jpg" alt="Tomomi Menjo">
     					</div>
     					<div class="team-desc">
-    						<div class="team-title"><h4>Tomomi Menjo</h4><span>Project Coordinator</span></div>
+    						<div class="team-title">
+                                <h4>Tomomi Menjo</h4>
+                                <span>Project Coordinator</span>
+                            </div>
     						<div class="team-content">
     							<p>A highly dynamic coordinator of String projects and business development activity, Tomomi was previously at the Women's Startup Lab in Menlo Park. She is a bilingual Japanese speaker, recently graduating Cum Laude with a B.A. in Communication from Santa Clara University. She proves you don't have to be a crypto geek to help drive String!</p>
     						</div>
@@ -433,13 +386,16 @@
     					</div>
     				</div>
     			</div>
-    			<div class="col-md-6 bottommargin">
+    			<div class="team-item">
     				<div class="team team-list clearfix">
     					<div class="team-image">
     						<img src="./images/team/jon-head1.jpg" alt="Jon Ball">
     					</div>
     					<div class="team-desc">
-    						<div class="team-title"><h4>Jon Ball</h4><span>Creative Lead</span></div>
+    						<div class="team-title">
+                                <h4>Jon Ball</h4>
+                                <span>Creative Lead</span>
+                            </div>
     						<div class="team-content">
     							<p>As an internationally renowned and influential designer, Jon has worked for many, many well known names, contributing a unique and highly original sense of style and stunning visions in print, digital and video. Jon also once worked with Dominic to create a 'growth monster' MMO that reached 3M users. A rockstar of design!</p>
     						</div>
@@ -451,8 +407,8 @@
     				</div>
     			</div>
     		</div>
-    		<div class="clear"></div>
     	</div>
+        <div class="clearfix"></div>
     </section>
 
     <section id="section-investment" class="page-section section nomargin dark bg-stringlabs full-height">
