--- a/ja/index.html
+++ b/ja/index.html
@@ -185,7 +185,7 @@
                     <div class="subtitle link"></div>
                 </div>
             </div>
-            <div class="clear"></div>
+            <div class="clearfix"></div>
         </div>
     </section>
 
@@ -198,78 +198,7 @@
             <p>DFINITY, especially Threshold Relay Chain consensus, extensively uses Stanford BLS signature as a cryptographic VRF (verifiable random function) to achieve incorruptible, unmanipulable and unpredictible randomness to select block maker and validator groups.</p>
             <p>It's also used in PHI autonomous commercial banking system as a powerful way to randomly select validators for financial loans to prevent collusion.</p>
         </div>
-        <table id="research-table">
-            <colgroup>
-                <col width="200">
-                <col width="300">
-                <col width="100">
-                <col width="100">
-                <col width="100">
-                <col width="100">
-                <col width="100">
-            </colgroup>
-            <tbody>
-                <tr>
-                    <td>
-                        <div>Cryptography</div>
-                    </td>
-                    <td>
-                        <div>Distributed Computing</div>
-                    </td>
-                    <td>
-                        <div>Economics</div>
-                    </td>
-                    <td>
-                        <div>Programming Languages</div>
-                    </td>
-                    <td>
-                        <div>Virtual Machines</div>
-                    </td>
-                    <td>
-                        <div>Trusted Computing</div>
-                    </td>
-                    <td>
-                        <div>Computer Security</div>
-                    </td>
-                </tr>
-                <tr class="panels">
-                    <td>
-                        <div>Topic</div>
-                        <div>Topic</div>
-                    </td>
-                    <td>
-                        <div>Topic</div>
-                        <div>Topic</div>
-                        <div>Topic</div>
-                    </td>
-                    <td colspan="5">
-                        <div>Topic</div>
-                        <div>Topic</div>
-                        <div>Topic</div>
-                        <div>Topic</div>
-                        <div>Topic</div>
-                    </td>
-                </tr>
-                <tr class="panels">
-                    <td>
-                        <div>Goal</div>
-                        <div>Goal</div>
-                    </td>
-                    <td>
-                        <div>Goal</div>
-                        <div>Goal</div>
-                        <div>Goal</div>
-                    </td>
-                    <td colspan="5">
-                        <div>Goal</div>
-                        <div>Goal</div>
-                        <div>Goal</div>
-                        <div>Goal</div>
-                        <div>Goal</div>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="center">[ research infographic ]</div>
         <div class="clearfix"></div>
     </section>
 
@@ -312,23 +241,39 @@
                     </div>
                 </div>
             </div>
-            <div class="clear"></div>
+            <div class="clearfix"></div>
         </div>
     </section>
+
     <section id="section-team" class="page-section section nomargin dark bg-stringlabs-dark full-height">
     	<div class="heading-block center">
     		<h2>チーム</h2>
     		<p>時代の最先端をゆくクリプト関係の仕事に興味がありますか？ String Labで働いてみませんか？</p>
     	</div>
-    	<div class="container clearfix">
+        <div id="team-desc" class="pull-left">
+            <h6>President/CTO</h6>
+            <h3>Dominic Williams</h3>
+            <p>英国出身のプロトコルのオタク、コーダー、そしてテクノロジー企業の連続起業家。 ドミニクの最新ベンチャーであるMMO（大規模マルチプレイヤー オンライン ゲーム）のユーザは3万人に達し、それによりスケーラブルテクノロジー開発に好きなだけ時間を使えるようになりました。ドミニクは少しヒッピーですが、ロンドン大学のコンピューターサイエンス部門で賞を受賞したこともあります。</p>
+        </div>
+        <div class="team-feature pull-left">
+            <div class="team team-list clearfix">
+                <div class="team-image">
+                    <img src="./images/team/dom-head2.jpg" alt="Dominic Williams">
+                </div>
+            </div>
+        </div>
+    	<div class="container pull-left">
     		<div class="row">
-    			<div class="col-md-6 bottommargin">
+    			<div class="team-item">
     				<div class="team team-list clearfix">
     					<div class="team-image">
     						<img src="./images/team/dom-head2.jpg" alt="Dominic Williams">
     					</div>
     					<div class="team-desc">
-    						<div class="team-title"><h4>Dominic Williams</h4><span>President/CTO</span></div>
+    						<div class="team-title">
+                                <h4>Dominic Williams</h4>
+                                <span>President/CTO</span>
+                            </div>
     						<div class="team-content">
     						    <p>英国出身のプロトコルのオタク、コーダー、そしてテクノロジー企業の連続起業家。 ドミニクの最新ベンチャーであるMMO（大規模マルチプレイヤー オンライン ゲーム）のユーザは3万人に達し、それによりスケーラブルテクノロジー開発に好きなだけ時間を使えるようになりました。ドミニクは少しヒッピーですが、ロンドン大学のコンピューターサイエンス部門で賞を受賞したこともあります。</p>
     						</div>
@@ -347,15 +292,18 @@
     					</div>
     				</div>
     			</div>
-    			<div class="col-md-6 bottommargin">
+    			<div class="team-item">
     				<div class="team team-list clearfix">
     					<div class="team-image">
     						<img src="./images/team/tom-head1.jpg" alt="Tom Ding">
     					</div>
     					<div class="team-desc">
-    						<div class="team-title"><h4>Tom Ding</h4><span>CEO</span></div>
+    						<div class="team-title">
+                                <h4>Tom Ding</h4>
+                                <span>CEO</span>
+                            </div>
     						<div class="team-content">
-    							<p><p>上海出身の連続起業家、ブロックチェーン大学の設立者であり、また、かつてはeBayのシニアマネージャーでした。トムは2013年、ブロックチェーン・ブームの波に乗り、そのときから振り返ったことはありません。コンピュータサイエンスを14歳、ビジネススクールを20歳で卒業しました。常連の起業家であり、クリプトの権威でもあります。</p></p>
+    							<p>上海出身の連続起業家、ブロックチェーン大学の設立者であり、また、かつてはeBayのシニアマネージャーでした。トムは2013年、ブロックチェーン・ブームの波に乗り、そのときから振り返ったことはありません。コンピュータサイエンスを14歳、ビジネススクールを20歳で卒業しました。常連の起業家であり、クリプトの権威でもあります。</p>
     						</div>
     						<a href="https://twitter.com/tom_ding" class="social-icon si-rounded si-small si-twitter">
     							<i class="icon-twitter"></i>
@@ -368,18 +316,18 @@
     					</div>
     				</div>
     			</div>
-    		</div>
-    		<div class="clear"></div>
-    		<div class="row">
-    			<div class="col-md-6 bottommargin">
+    			<div class="team-item">
     				<div class="team team-list clearfix">
     					<div class="team-image">
     						<img src="./images/team/timo-head1.jpg" alt="Timo Hanke">
     					</div>
     					<div class="team-desc">
-    						<div class="team-title"><h4>Timo Hanke</h4><span>Chief Cryptographer</span></div>
+    						<div class="team-title">
+                                <h4>Timo Hanke</h4>
+                                <span>Chief Cryptographer</span>
+                            </div>
     						<div class="team-content">
-    							<p><p>ティモは、かつてドイツのアーヘン工科大学の数学および暗号学の教授でしたが、分散分野に強い興味を持ちました。数々の暗号製品に携わり、String Labsに入社する前には有名なAsicBoost（http://asicboost.com/）を発明し、特許を取得しました。 当社では、第3世代暗号システムを開発しています。</p></p>
+    							<p>ティモは、かつてドイツのアーヘン工科大学の数学および暗号学の教授でしたが、分散分野に強い興味を持ちました。数々の暗号製品に携わり、String Labsに入社する前には有名なAsicBoost（http://asicboost.com/）を発明し、特許を取得しました。 当社では、第3世代暗号システムを開発しています。</p>
     						</div>
     						<a href="https://twitter.com/timothanke" class="social-icon si-rounded si-small si-twitter">
     							<i class="icon-twitter"></i>
@@ -396,15 +344,20 @@
     					</div>
     				</div>
     			</div>
-    			<div class="col-md-6 bottommargin">
+            </div>
+            <div class="row">
+    			<div class="team-item">
     				<div class="team team-list clearfix">
     					<div class="team-image">
     						<img src="./images/team/enzo-head1.jpg" alt="Enzo Haussecker">
     					</div>
     					<div class="team-desc">
-    						<div class="team-title"><h4>Enzo Haussecker</h4><span>Senior Software Engineer</span></div>
+    						<div class="team-title">
+                                <h4>Enzo Haussecker</h4>
+                                <span>Senior Software Engineer</span>
+                            </div>
     						<div class="team-content">
-    							<p><p></p></p>
+    							<p></p>
     						</div>
     						<a href="https://www.linkedin.com/in/ehaussecker" class="social-icon si-rounded si-small si-linkedin">
     							<i class="icon-linkedin"></i>
@@ -413,16 +366,16 @@
     					</div>
     				</div>
     			</div>
-    		</div>
-    		<div class="clear"></div>
-    		<div class="row">
-    			<div class="col-md-6 bottommargin">
+    			<div class="team-item">
     				<div class="team team-list clearfix">
     					<div class="team-image">
     						<img src="./images/team/tomomi-head1.jpg" alt="Tomomi Menjo">
     					</div>
     					<div class="team-desc">
-    						<div class="team-title"><h4>Tomomi Menjo</h4><span>Project Coordinator</span></div>
+    						<div class="team-title">
+                                <h4>Tomomi Menjo</h4>
+                                <span>Project Coordinator</span>
+                            </div>
     						<div class="team-content">
     							<p>トモミは、Stringプロジェクトと事業開発に携わるダイナミックなコーディネーターです。以前はMenlo Park市のWomen's Startup Labに所属しており、英語と日本語の2か国語を操ります。サンタクララ大学においてコミュニケーション学士号の優等で卒業しました。Stringを利用するために暗号オタクになる必要がないことを証明する彼女です。</p>
     						</div>
@@ -433,13 +386,16 @@
     					</div>
     				</div>
     			</div>
-    			<div class="col-md-6 bottommargin">
+    			<div class="team-item">
     				<div class="team team-list clearfix">
     					<div class="team-image">
     						<img src="./images/team/jon-head1.jpg" alt="Jon Ball">
     					</div>
     					<div class="team-desc">
-    						<div class="team-title"><h4>Jon Ball</h4><span>Creative Lead</span></div>
+    						<div class="team-title">
+                                <h4>Jon Ball</h4>
+                                <span>Creative Lead</span>
+                            </div>
     						<div class="team-content">
     							<p>ジョンは、世界的に有名なデザイナーです。数々の著名な人物を相手に、非常に独創的なスタイル、印象的なイメージをプリント、デジタル、ビデオを通して表現してきました。 ジョンはかつてドミニクと手を組んで、ユーザが3万人に達したMMOを制作したチームの一人です。デザインのロックスターと言えるでしょう。</p>
     						</div>
@@ -451,8 +407,8 @@
     				</div>
     			</div>
     		</div>
-    		<div class="clear"></div>
     	</div>
+        <div class="clearfix"></div>
     </section>
 
     <section id="section-investment" class="page-section section nomargin dark bg-stringlabs full-height">
