--- a/index.html
+++ b/index.html
@@ -155,160 +155,162 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
             <h3>Dominic Williams</h3>
             <p>{% t index.team-dominic-intro %}</p>
         </div>
-        <div class="team-feature pull-left">
-            <div class="team team-list clearfix">
-                <div class="team-image">
-                    <img src="{{ base }}/images/team/dom-head2.jpg" alt="Dominic Williams">
+        <div class="team-list-container">
+            <div class="team-feature pull-left">
+                <div class="team team-list clearfix">
+                    <div class="team-image">
+                        <img src="{{ base }}/images/team/dom-head2.jpg" alt="Dominic Williams">
+                    </div>
                 </div>
             </div>
+        	<div class="container pull-left">
+        		<div class="row">
+        			<div class="team-item">
+        				<div class="team team-list clearfix">
+        					<div class="team-image">
+        						<img src="{{ base }}/images/team/dom-head2.jpg" alt="Dominic Williams">
+        					</div>
+        					<div class="team-desc">
+        						<div class="team-title">
+                                    <h4>Dominic Williams</h4>
+                                    <span>President/CTO</span>
+                                </div>
+        						<div class="team-content">
+        						    <p>{% t index.team-dominic-intro %}</p>
+        						</div>
+        						<a href="https://twitter.com/dominic_w" class="social-icon si-rounded si-small si-twitter">
+        							<i class="icon-twitter"></i>
+        							<i class="icon-twitter"></i>
+        						</a>
+        						<a href="https://medium.com/@dominic_w" class="social-icon si-rounded si-small si-tumblr">
+        							<i class="icon-tumblr"></i>
+        							<i class="icon-tumblr"></i>
+        						</a>
+        						<a href="https://www.linkedin.com/in/thedwilliams" class="social-icon si-rounded si-small si-linkedin">
+        							<i class="icon-linkedin"></i>
+        							<i class="icon-linkedin"></i>
+        						</a>
+        					</div>
+        				</div>
+        			</div>
+        			<div class="team-item">
+        				<div class="team team-list clearfix">
+        					<div class="team-image">
+        						<img src="{{ base }}/images/team/tom-head1.jpg" alt="Tom Ding">
+        					</div>
+        					<div class="team-desc">
+        						<div class="team-title">
+                                    <h4>Tom Ding</h4>
+                                    <span>CEO</span>
+                                </div>
+        						<div class="team-content">
+        							<p>{% t index.team-tom-intro %}</p>
+        						</div>
+        						<a href="https://twitter.com/tom_ding" class="social-icon si-rounded si-small si-twitter">
+        							<i class="icon-twitter"></i>
+        							<i class="icon-twitter"></i>
+        						</a>
+        						<a href="https://www.linkedin.com/in/tomding" class="social-icon si-rounded si-small si-linkedin">
+        							<i class="icon-linkedin"></i>
+        							<i class="icon-linkedin"></i>
+        						</a>
+        					</div>
+        				</div>
+        			</div>
+        			<div class="team-item">
+        				<div class="team team-list clearfix">
+        					<div class="team-image">
+        						<img src="{{ base }}/images/team/timo-head1.jpg" alt="Timo Hanke">
+        					</div>
+        					<div class="team-desc">
+        						<div class="team-title">
+                                    <h4>Timo Hanke</h4>
+                                    <span>Chief Cryptographer</span>
+                                </div>
+        						<div class="team-content">
+        							<p>{% t index.team-timo-intro %}</p>
+        						</div>
+        						<a href="https://twitter.com/timothanke" class="social-icon si-rounded si-small si-twitter">
+        							<i class="icon-twitter"></i>
+        							<i class="icon-twitter"></i>
+        						</a>
+        						<a href="https://www.linkedin.com/in/timo-hanke-62079775" class="social-icon si-rounded si-small si-linkedin">
+        							<i class="icon-linkedin"></i>
+        							<i class="icon-linkedin"></i>
+        						</a>
+        						<a href="https://github.com/bcpki" class="social-icon si-rounded si-small si-github">
+        							<i class="icon-github"></i>
+        							<i class="icon-github"></i>
+        						</a>
+        					</div>
+        				</div>
+        			</div>
+                </div>
+                <div class="row">
+        			<div class="team-item">
+        				<div class="team team-list clearfix">
+        					<div class="team-image">
+        						<img src="{{ base }}/images/team/enzo-head1.jpg" alt="Enzo Haussecker">
+        					</div>
+        					<div class="team-desc">
+        						<div class="team-title">
+                                    <h4>Enzo Haussecker</h4>
+                                    <span>Senior Software Engineer</span>
+                                </div>
+        						<div class="team-content">
+        							<p>{% t index.team-enzo-intro %}</p>
+        						</div>
+        						<a href="https://www.linkedin.com/in/ehaussecker" class="social-icon si-rounded si-small si-linkedin">
+        							<i class="icon-linkedin"></i>
+        							<i class="icon-linkedin"></i>
+        						</a>
+        					</div>
+        				</div>
+        			</div>
+        			<div class="team-item">
+        				<div class="team team-list clearfix">
+        					<div class="team-image">
+        						<img src="{{ base }}/images/team/tomomi-head1.jpg" alt="Tomomi Menjo">
+        					</div>
+        					<div class="team-desc">
+        						<div class="team-title">
+                                    <h4>Tomomi Menjo</h4>
+                                    <span>Project Coordinator</span>
+                                </div>
+        						<div class="team-content">
+        							<p>{% t index.team-tomomi-intro %}</p>
+        						</div>
+        						<a href="https://www.linkedin.com/in/tomomi-menjo" class="social-icon si-rounded si-small si-linkedin">
+        							<i class="icon-linkedin"></i>
+        							<i class="icon-linkedin"></i>
+        						</a>
+        					</div>
+        				</div>
+        			</div>
+        			<div class="team-item">
+        				<div class="team team-list clearfix">
+        					<div class="team-image">
+        						<img src="{{ base }}/images/team/jon-head1.jpg" alt="Jon Ball">
+        					</div>
+        					<div class="team-desc">
+        						<div class="team-title">
+                                    <h4>Jon Ball</h4>
+                                    <span>Creative Lead</span>
+                                </div>
+        						<div class="team-content">
+        							<p>{% t index.team-jon-intro %}</p>
+        						</div>
+        						<a href="http://www.pokedstudio.com/" class="social-icon si-rounded si-small si-github">
+        							<i class="icon-github"></i>
+        							<i class="icon-github"></i>
+        						</a>
+        					</div>
+        				</div>
+        			</div>
+        		</div>
+        	</div>
+            <div class="clearfix"></div>
         </div>
-    	<div class="container pull-left">
-    		<div class="row">
-    			<div class="team-item">
-    				<div class="team team-list clearfix">
-    					<div class="team-image">
-    						<img src="{{ base }}/images/team/dom-head2.jpg" alt="Dominic Williams">
-    					</div>
-    					<div class="team-desc">
-    						<div class="team-title">
-                                <h4>Dominic Williams</h4>
-                                <span>President/CTO</span>
-                            </div>
-    						<div class="team-content">
-    						    <p>{% t index.team-dominic-intro %}</p>
-    						</div>
-    						<a href="https://twitter.com/dominic_w" class="social-icon si-rounded si-small si-twitter">
-    							<i class="icon-twitter"></i>
-    							<i class="icon-twitter"></i>
-    						</a>
-    						<a href="https://medium.com/@dominic_w" class="social-icon si-rounded si-small si-tumblr">
-    							<i class="icon-tumblr"></i>
-    							<i class="icon-tumblr"></i>
-    						</a>
-    						<a href="https://www.linkedin.com/in/thedwilliams" class="social-icon si-rounded si-small si-linkedin">
-    							<i class="icon-linkedin"></i>
-    							<i class="icon-linkedin"></i>
-    						</a>
-    					</div>
-    				</div>
-    			</div>
-    			<div class="team-item">
-    				<div class="team team-list clearfix">
-    					<div class="team-image">
-    						<img src="{{ base }}/images/team/tom-head1.jpg" alt="Tom Ding">
-    					</div>
-    					<div class="team-desc">
-    						<div class="team-title">
-                                <h4>Tom Ding</h4>
-                                <span>CEO</span>
-                            </div>
-    						<div class="team-content">
-    							<p>{% t index.team-tom-intro %}</p>
-    						</div>
-    						<a href="https://twitter.com/tom_ding" class="social-icon si-rounded si-small si-twitter">
-    							<i class="icon-twitter"></i>
-    							<i class="icon-twitter"></i>
-    						</a>
-    						<a href="https://www.linkedin.com/in/tomding" class="social-icon si-rounded si-small si-linkedin">
-    							<i class="icon-linkedin"></i>
-    							<i class="icon-linkedin"></i>
-    						</a>
-    					</div>
-    				</div>
-    			</div>
-    			<div class="team-item">
-    				<div class="team team-list clearfix">
-    					<div class="team-image">
-    						<img src="{{ base }}/images/team/timo-head1.jpg" alt="Timo Hanke">
-    					</div>
-    					<div class="team-desc">
-    						<div class="team-title">
-                                <h4>Timo Hanke</h4>
-                                <span>Chief Cryptographer</span>
-                            </div>
-    						<div class="team-content">
-    							<p>{% t index.team-timo-intro %}</p>
-    						</div>
-    						<a href="https://twitter.com/timothanke" class="social-icon si-rounded si-small si-twitter">
-    							<i class="icon-twitter"></i>
-    							<i class="icon-twitter"></i>
-    						</a>
-    						<a href="https://www.linkedin.com/in/timo-hanke-62079775" class="social-icon si-rounded si-small si-linkedin">
-    							<i class="icon-linkedin"></i>
-    							<i class="icon-linkedin"></i>
-    						</a>
-    						<a href="https://github.com/bcpki" class="social-icon si-rounded si-small si-github">
-    							<i class="icon-github"></i>
-    							<i class="icon-github"></i>
-    						</a>
-    					</div>
-    				</div>
-    			</div>
-            </div>
-            <div class="row">
-    			<div class="team-item">
-    				<div class="team team-list clearfix">
-    					<div class="team-image">
-    						<img src="{{ base }}/images/team/enzo-head1.jpg" alt="Enzo Haussecker">
-    					</div>
-    					<div class="team-desc">
-    						<div class="team-title">
-                                <h4>Enzo Haussecker</h4>
-                                <span>Senior Software Engineer</span>
-                            </div>
-    						<div class="team-content">
-    							<p>{% t index.team-enzo-intro %}</p>
-    						</div>
-    						<a href="https://www.linkedin.com/in/ehaussecker" class="social-icon si-rounded si-small si-linkedin">
-    							<i class="icon-linkedin"></i>
-    							<i class="icon-linkedin"></i>
-    						</a>
-    					</div>
-    				</div>
-    			</div>
-    			<div class="team-item">
-    				<div class="team team-list clearfix">
-    					<div class="team-image">
-    						<img src="{{ base }}/images/team/tomomi-head1.jpg" alt="Tomomi Menjo">
-    					</div>
-    					<div class="team-desc">
-    						<div class="team-title">
-                                <h4>Tomomi Menjo</h4>
-                                <span>Project Coordinator</span>
-                            </div>
-    						<div class="team-content">
-    							<p>{% t index.team-tomomi-intro %}</p>
-    						</div>
-    						<a href="https://www.linkedin.com/in/tomomi-menjo" class="social-icon si-rounded si-small si-linkedin">
-    							<i class="icon-linkedin"></i>
-    							<i class="icon-linkedin"></i>
-    						</a>
-    					</div>
-    				</div>
-    			</div>
-    			<div class="team-item">
-    				<div class="team team-list clearfix">
-    					<div class="team-image">
-    						<img src="{{ base }}/images/team/jon-head1.jpg" alt="Jon Ball">
-    					</div>
-    					<div class="team-desc">
-    						<div class="team-title">
-                                <h4>Jon Ball</h4>
-                                <span>Creative Lead</span>
-                            </div>
-    						<div class="team-content">
-    							<p>{% t index.team-jon-intro %}</p>
-    						</div>
-    						<a href="http://www.pokedstudio.com/" class="social-icon si-rounded si-small si-github">
-    							<i class="icon-github"></i>
-    							<i class="icon-github"></i>
-    						</a>
-    					</div>
-    				</div>
-    			</div>
-    		</div>
-    	</div>
-        <div class="clearfix"></div>
     </section>
 
     <section id="section-investment" class="page-section section nomargin dark bg-stringlabs full-height">
@@ -355,7 +357,7 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
                 },
                 {
                     listener: '#section-team .container .team-image',
-                    type: 'click',
+                    type: 'mouseover',
                     handler: 'didClickTeamImage'
                 },
                 {
@@ -421,10 +423,12 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
                 let name = $(selector).parent().next().find('.team-title > h4').html();
                 let title = $(selector).parent().next().find('.team-title > h4 + span').html();
                 let content = $(selector).parent().next().find('.team-content > p').html();
+                $('.team-list-container .team-image').removeClass('active');
                 $('.team-feature .team-image').find('img').attr('src', $(selector).attr('src'));
                 $('#team-desc > h6').html(name);
                 $('#team-desc > h3').html(title);
                 $('#team-desc > p').html(content);
+                return $(selector).parent().addClass('active');
             },
 
             didClickSectionLink(staticArgs, event) {
